# cpp-api-base

./: .env.example  .gitignore  CMakeLists.txt  Makefile  README.md  config.json  setup.sh  start.sh  vcpkg.json
database/migrations/: 000_create_migrations_table.sql  001_create_api_clients.sql
scripts/: client.sh  db.sh
src/: main.cpp
src/config/: Config.cpp  Config.hpp
src/controllers/: Routes.hpp
src/controllers/me/: MeController.cpp  MeController.hpp
src/controllers/ping/: PingController.cpp  PingController.hpp
src/database/: DatabaseConfig.cpp  DatabaseConfig.hpp  DatabaseProvider.cpp  DatabaseProvider.hpp
src/database/mysql/: MySqlProvider.hpp
src/middlewares/: CorsMiddleware.cpp  CorsMiddleware.hpp  OAuthMiddleware.cpp  OAuthMiddleware.hpp
src/utils/: EnvLoader.hpp  Response.hpp
